--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,7 +11,7 @@
       </li>
 
       <li class="nav-item"><a class="nav-link" href="{{site.baseurl}}/methods">Methods</a></li>
-    <li class="nav-item"><a class="nav-link" href="{{site.baseurl}}/milling-overview">Early Milling in NM</a></li>
+    <li class="nav-item"><a class="nav-link" href="{{site.baseurl}}/early-milling-in-nm">Early Milling in NM</a></li>
     <li class="nav-item"><a class="nav-link" href="{{site.baseurl}}/frontier">The Frontier Effect</a></li>
     <li class="nav-item"><a class="nav-link" href="{{site.baseurl}}/map">A Geographical Perspective</a></li>
     <li class="nav-item"><a class="nav-link" href="{{site.baseurl}}/directory">Case Studies</a></li>
