--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="pt-4 my-md-5 pt-md-5 border-top">
   <div class="row">
     <div class="col-12 col-md">
-      Maybe some description text goes here. It could be anything really. But too much would probably be hard to read. But helps give the reader an overview.
+      GRIST: an undergraduate independent study project with the History Department at The University of New Mexico.
     </div>
     <div class="col-6 col-md">
       <h5>Features</h5>
