--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,12 +21,11 @@
       </ul>
     </div>
     <div class="col-6 col-md">
-      <h5>About</h5>
+      <h5>Case Studies</h5>
       <ul class="list-unstyled text-small">
-        <li><a href="#">Team</a></li>
-        <li><a href="#">Locations</a></li>
-        <li><a href="#">Privacy</a></li>
-        <li><a href="#">Terms</a></li>
+        <li><a href="#">Laureano Cordova Mill</a></li>
+        <li><a href="#">St. Vrain Mill</a></li>
+        <li><a href="#">Valencia Flour Mill</a></li>
       </ul>
     </div>
   </div>
