--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,12 +12,12 @@
       </ul>
     </div>
     <div class="col-6 col-md">
-      <h5>Resources</h5>
+      <h5>(Re)sources</h5>
       <ul class="list-unstyled text-small">
-        <li><a href="#">Resource</a></li>
-        <li><a href="#">Resource name</a></li>
-        <li><a href="#">Another resource</a></li>
-        <li><a href="#">Final resource</a></li>
+        <li><a href="#">Bibliography</a></li>
+        <li><a href="#">GIS Data</a></li>
+        <li><a href="#">Center for Southwest Research</a></li>
+        <li><a href="#">Fray Angelico Chavez History Library</a></li>
       </ul>
     </div>
     <div class="col-6 col-md">
