--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,9 +6,10 @@
     <div class="col-6 col-md">
       <h5>Features</h5>
       <ul class="list-unstyled text-small">
-        <li><a href="#">Cool stuff</a></li>
-        <li><a href="#">Random feature</a></li>
-        <li><a href="#">Team feature</a></li>
+        <li><a href="#">Methods</a></li>
+        <li><a href="#">History</a></li>
+        <li><a href="#">Map</a></li>
+        <li><a href="#">Gallery</a></li>
       </ul>
     </div>
     <div class="col-6 col-md">
