--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -312,7 +312,7 @@ figcaption a {
 footer {
   margin-top:2em;
   padding: 2em;
-  background-color: #823b3b;
+  background-color: #FFC72C;
   color:#ccc;
   text-align: left;
 }
