--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
       <h5>(Re)sources</h5>
       <ul class="list-unstyled text-small">
         <li><a href="#">Bibliography</a></li>
-        <li><a href="#">GIS Data</a></li>
+        <li><a href="/gisdata">GIS Data</a></li>
         <li><a href="#">Center for Southwest Research</a></li>
         <li><a href="#">Fray Angelico Chavez History Library</a></li>
       </ul>
