--- a/_layouts/directory.html
+++ b/_layouts/directory.html
@@ -65,6 +65,6 @@
       </script>
 
     {% if jekyll.environment == 'production' and site.analytics_id %}{% include google_analytics.html %}{% endif %}
-
+    {% include footer.html %}
   </body>
 </html>
