--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,19 @@
         <a class="nav-link" href="{{site.baseurl}}/index">Home <span class="sr-only">(current)</span></a>
       </li>
 
-      <li class="nav-item"><a class="nav-link" href="{{site.baseurl}}/methods">Methods</a></li>
+      
+       <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="{{'/methods' | absolute_url}}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Methods
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="{{'/guides/getting-started' | absolute_url}}"">Text Mining</a>
+          <a class="dropdown-item" href="{{site.baseurl}}/guides/loading-images">GIS</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">More to come...</a>
+        </div>
+      </li>
+      
     <li class="nav-item"><a class="nav-link" href="{{site.baseurl}}/early-milling-in-nm">The Rise and Fall of Flour Milling in NM</a></li>
     <li class="nav-item"><a class="nav-link" href="{{site.baseurl}}/map">A Geographical Perspective</a></li>
     <li class="nav-item"><a class="nav-link" href="{{site.baseurl}}/directory">Case Studies</a></li>
